[gd_scene load_steps=2 format=3 uid="uid://d2kq4i7lld0p6"]

[ext_resource type="Script" uid="uid://l1majjw60eyp" path="res://Mulitplayer_System/lobby_customizer.gd" id="1_ierqv"]

[node name="LobbyCustomizer" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ierqv")
ui_offset = Vector2(50, 60)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.5
offset_top = -33.5
offset_right = 42.5
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="LeftPartBtn" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "<"

[node name="PartLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Hair"
horizontal_alignment = 1

[node name="RightPartBtn" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = ">"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="LeftColorBtn" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "<"

[node name="ColorDisplay" type="ColorRect" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 3

[node name="RightColorBtn" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = ">"

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/LeftPartBtn" to="." method="_on_left_part_btn_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/RightPartBtn" to="." method="_on_right_part_btn_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer2/LeftColorBtn" to="." method="_on_left_color_btn_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer2/RightColorBtn" to="." method="_on_right_color_btn_pressed"]
